Fix revisions